--- a/heaps.ipynb
+++ b/heaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ba3e174",
+   "id": "7b78af2d",
    "metadata": {},
    "source": [
     "# Heaps"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25329ab",
+   "id": "d344bb12",
    "metadata": {},
    "source": [
     "## Min Heap"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ddecc3d2",
+   "id": "e4819798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9072aa1b",
+   "id": "0ea3e247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a2b2fae7",
+   "id": "5ffda7d5",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b6870e",
+   "id": "5aaee2a9",
    "metadata": {},
    "source": [
     "## heapq Python Library"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "730dae17",
+   "id": "a7e6f1d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ccaf324e",
+   "id": "7f66c26c",
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +198,356 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abcdffbb",
+   "metadata": {},
+   "source": [
+    "## Largest Triple Products\n",
+    "\n",
+    "You're given a list of n integers arr[0..(n-1)]. You must compute a list output[0..(n-1)] such that, for each index i (between 0 and n-1, inclusive), output[i] is equal to the product of the three largest elements out of arr[0..i] (or equal to -1 if i < 2, as arr[0..i] then includes fewer than three elements).\n",
+    "\n",
+    "Note that the three largest elements used to form any product may have the same values as one another, but they must be at different indices in arr.\n",
+    "\n",
+    "<b>Example 1</b>\n",
+    "\n",
+    "n = 5 <br />\n",
+    "arr = [1, 2, 3, 4, 5] <br />\n",
+    "output = [-1, -1, 6, 24, 60]\n",
+    "\n",
+    "The 3rd element of output is 3 x 2 x 1 = 6, the 4th is 4 x 3 x 2 = 24, and the 5th is 5 x 4 x 3 = 60.\n",
+    "\n",
+    "<b>Example 2</b>\n",
+    "\n",
+    "n = 5 <br />\n",
+    "arr = [2, 1, 2, 1, 2] <br />\n",
+    "output = [-1, -1, 4, 4, 8]\n",
+    "\n",
+    "The 3rd element of output is 2 x 2 x 1 = 4, the 4th is 2 x 2 x 1 = 4, and the 5th is 2 x 2 x 2 = 8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5fc38bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bb90d61e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMaxProduct(arr):\n",
+    "    output = []\n",
+    "    heap = []\n",
+    "    # heapq.heapify(heap)\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        heapq.heappush(heap, num)\n",
+    "        if len(heap) < 3:\n",
+    "            output.append(-1)\n",
+    "        else:\n",
+    "            output.append(np.prod(heapq.nlargest(3, heap)))\n",
+    "    \n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "24c572ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -1, 6, 24, 60]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 = [1, 2, 3, 4, 5]\n",
+    "findMaxProduct(arr_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "86107674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -1, 56, 56, 140, 140]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2 = [2, 4, 7, 1, 5, 3]\n",
+    "findMaxProduct(arr_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f1052e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -1, 4, 4, 8]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_3 = [2, 1, 2, 1, 2]\n",
+    "findMaxProduct(arr_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e667c804",
+   "metadata": {},
+   "source": [
+    "## Magical Candy Bags\n",
+    "\n",
+    "You have N bags of candy. The ith bag contains arr[i] pieces of candy, and each of the bags is magical!\n",
+    "\n",
+    "It takes you 1 minute to eat all of the pieces of candy in a bag (irrespective of how many pieces of candy are inside), and as soon as you finish, the bag mysteriously refills. If there were x pieces of candy in the bag at the beginning of the minute, then after you've finished you'll find that floor(x/2) pieces are now inside.\n",
+    "\n",
+    "You have k minutes to eat as much candy as possible. How many pieces of candy can you eat?\n",
+    "\n",
+    "<b>Example 1</b>\n",
+    "\n",
+    "N = 5 <br />\n",
+    "k = 3 <br />\n",
+    "arr = [2, 1, 7, 4, 2] <br />\n",
+    "output = 14\n",
+    "\n",
+    "In the first minute you can eat 7 pieces of candy. That bag will refill with floor(7/2) = 3 pieces.\n",
+    "\n",
+    "In the second minute you can eat 4 pieces of candy from another bag. That bag will refill with floor(4/2) = 2 pieces.\n",
+    "\n",
+    "In the third minute you can eat the 3 pieces of candy that have appeared in the first bag that you ate.\n",
+    "\n",
+    "In total you can eat 7 + 4 + 3 = 14 pieces of candy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8382e815",
+   "id": "f3f18bb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Older Solution\n",
+    "\n",
+    "# def maxCandies(arr, k):\n",
+    "#     heapq._heapify_max(arr)\n",
+    "    \n",
+    "#     total_candies = 0\n",
+    "#     for _ in range(3):\n",
+    "#         largest_num = heapq.nlargest(1, arr)[0]\n",
+    "#         total_candies += largest_num\n",
+    "#         heapq._heapreplace_max(arr, largest_num//2)\n",
+    "    \n",
+    "#     return total_candies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "503c657d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxCandies(arr, k):\n",
+    "    candy_pieces = 0\n",
+    "    heap = []\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        heapq.heappush(heap, -num)\n",
+    "    \n",
+    "    for _ in range(k):\n",
+    "        num_max = abs(heapq.heappop(heap))\n",
+    "        heapq.heappush(heap, -(num_max//2))\n",
+    "        candy_pieces += num_max\n",
+    "    \n",
+    "    return candy_pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0f615ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 = [2, 1, 7, 4, 2]\n",
+    "k_1 = 3\n",
+    "maxCandies(arr_1, k_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "175ea875",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2 = [19, 78, 76, 72, 48, 8, 24, 74, 29]\n",
+    "k_2 = 3\n",
+    "maxCandies(arr_2, k_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0ee3d51",
+   "metadata": {},
+   "source": [
+    "## Median Stream\n",
+    "\n",
+    "You're given a list of n integers arr[0..(n-1)]. You must compute a list output[0..(n-1)] such that, for each index i (between 0 and n-1, inclusive), output[i] is equal to the median of the elements arr[0..i] (rounded down to the nearest integer).\n",
+    "\n",
+    "The median of a list of integers is defined as follows. If the integers were to be sorted, then:\n",
+    "\n",
+    "* If there are an odd number of integers, then the median is equal to the middle integer in the sorted order.\n",
+    "* Otherwise, if there are an even number of integers, then the median is equal to the average of the two middle-most integers in the sorted order.\n",
+    "\n",
+    "<b>Example 1</b>\n",
+    "\n",
+    "n = 4 <br />\n",
+    "arr = [5, 15, 1, 3] <br />\n",
+    "output = [5, 10, 5, 4]\n",
+    "\n",
+    "The median of [5] is 5, the median of [5, 15] is (5 + 15) / 2 = 10, the median of [5, 15, 1] is 5, and the median of [5, 15, 1, 3] is (3 + 5) / 2 = 4.\n",
+    "\n",
+    "<b>Example 2</b>\n",
+    "\n",
+    "n = 2 <br />\n",
+    "arr = [1, 2] <br />\n",
+    "output = [1, 1]\n",
+    "\n",
+    "The median of [1] is 1, the median of [1, 2] is (1 + 2) / 2 = 1.5 (which should be rounded down to 1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "874f6f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMedian(arr):\n",
+    "    \n",
+    "    output = []\n",
+    "    max_heap = []\n",
+    "    min_heap = []\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        if len(max_heap) == len(min_heap):\n",
+    "            heapq.heappush(min_heap, -heapq.heappushpop(max_heap, -num))\n",
+    "        else:\n",
+    "            heapq.heappush(max_heap, -heapq.heappushpop(min_heap, num))\n",
+    "\n",
+    "        if len(max_heap) == len(min_heap):\n",
+    "            output.append((min_heap[0] - max_heap[0]) // 2)\n",
+    "        else:\n",
+    "            output.append(min_heap[0])\n",
+    "    \n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "ccdc20e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 10, 5, 4]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1 = [5, 15, 1, 3]\n",
+    "findMedian(arr_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "81f18589",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 3, 4, 3]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2 = [2, 4, 7, 1, 5, 3]\n",
+    "findMedian(arr_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaebc5e3",
    "metadata": {},
    "outputs": [],
    "source": []
