--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -294,9 +294,349 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7dfb2b0e",
+   "metadata": {},
+   "source": [
+    "# LeetCode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c17d495",
+   "metadata": {},
+   "source": [
+    "## 1768. Merge Strings Alternately\n",
+    "\n",
+    "You are given two strings word1 and word2. Merge the strings by adding letters in alternating order, starting with word1. If a string is longer than the other, append the additional letters onto the end of the merged string.\n",
+    "\n",
+    "Return the merged string.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: word1 = \"abc\", word2 = \"pqr\" <br />\n",
+    "Output: \"apbqcr\"\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: word1 = \"ab\", word2 = \"pqrs\" <br />\n",
+    "Output: \"apbqrs\"\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: word1 = \"abcd\", word2 = \"pq\" <br />\n",
+    "Output: \"apbqcd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "90b98493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeAlternately(word1: str, word2: str) -> str:\n",
+    "    \n",
+    "    list_word1 = list(word1)\n",
+    "    list_word2 = list(word2)\n",
+    "    \n",
+    "    merged_str = \"\"\n",
+    "    for i in range(min(len(list_word1), len(list_word2))):\n",
+    "        merged_str += list_word1.pop(0) + list_word2.pop(0)\n",
+    "    \n",
+    "    if len(list_word1) > 0:\n",
+    "        merged_str += ''.join(list_word1)\n",
+    "    elif len(list_word2) > 0:\n",
+    "        merged_str += ''.join(list_word2)\n",
+    "        \n",
+    "    return merged_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7c77fcbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'apbqcr'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergeAlternately(\"abc\", \"pqr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e6a6da1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'apbqrs'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergeAlternately(\"ab\", \"pqrs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dc1fbb28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'apbqcd'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergeAlternately(\"abcd\", \"pq\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd737139",
+   "metadata": {},
+   "source": [
+    "## 1071. Greatest Common Divisor of Strings\n",
+    "\n",
+    "For two strings s and t, we say \"t divides s\" if and only if s = t + t + t + ... + t + t (i.e., t is concatenated with itself one or more times).\n",
+    "\n",
+    "Given two strings str1 and str2, return the largest string x such that x divides both str1 and str2.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: str1 = \"ABCABC\", str2 = \"ABC\" <br />\n",
+    "Output: \"ABC\"\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: str1 = \"ABABAB\", str2 = \"ABAB\" <br />\n",
+    "Output: \"AB\"\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: str1 = \"LEET\", str2 = \"CODE\" <br />\n",
+    "Output: \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f265fe",
+   "metadata": {},
+   "source": [
+    "### Recursive Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c1231a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcdOfStrings_recur(str1: str, str2: str) -> str:\n",
+    "    \n",
+    "    if str1 + str2 != str2 + str1:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    if len(str1) == len(str2):\n",
+    "        return str1\n",
+    "    \n",
+    "    if len(str1) > len(str2):\n",
+    "        return gcdOfStrings(str1[len(str2):], str2)\n",
+    "    \n",
+    "    return gcdOfStrings(str1, str2[len(str1):])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9f13a57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABC'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_recur(\"ABCABC\", \"ABC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "56224889",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AB'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_recur(\"ABABAB\", \"ABAB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "031eae99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_recur(\"LEET\", \"CODE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d10996",
+   "metadata": {},
+   "source": [
+    "### Iterative Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "774a67f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import gcd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c4da281c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcdOfStrings_iter(str1: str, str2: str) -> str:\n",
+    "\n",
+    "    if str1 + str2 != str2 + str1:\n",
+    "        return \"\"\n",
+    "\n",
+    "    # Get the GCD of the two lengths.\n",
+    "    gcd_length = gcd(len(str1), len(str2))\n",
+    "    \n",
+    "    return str1[:gcd_length]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "19f38226",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABC'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_iter(\"ABCABC\", \"ABC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "20921876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AB'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_iter(\"ABABAB\", \"ABAB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "330aa42b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcdOfStrings_iter(\"LEET\", \"CODE\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afc27eb8",
+   "id": "070f11ec",
    "metadata": {},
    "outputs": [],
    "source": []
