add 2 more array related code examples

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dfb2b0e",
+   "id": "fa25ac80",
    "metadata": {},
    "source": [
     "# LeetCode"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c17d495",
+   "id": "0337c70e",
    "metadata": {},
    "source": [
     "## 1768. Merge Strings Alternately\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "90b98493",
+   "id": "cbf5bfcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c77fcbd",
+   "id": "0953d1f7",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e6a6da1b",
+   "id": "70fca6de",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dc1fbb28",
+   "id": "49f811b1",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd737139",
+   "id": "eed267c7",
    "metadata": {},
    "source": [
     "## 1071. Greatest Common Divisor of Strings\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f265fe",
+   "id": "01429b44",
    "metadata": {},
    "source": [
     "### Recursive Solution"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c1231a3c",
+   "id": "02127614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9f13a57f",
+   "id": "eeca67f5",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "56224889",
+   "id": "5d3d6609",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "031eae99",
+   "id": "4f90d516",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d10996",
+   "id": "914b8897",
    "metadata": {},
    "source": [
     "### Iterative Solution"
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "774a67f2",
+   "id": "8b7f1bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c4da281c",
+   "id": "33900ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "19f38226",
+   "id": "8ba42cc7",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "20921876",
+   "id": "73a0d8f8",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "330aa42b",
+   "id": "d8ee944b",
    "metadata": {},
    "outputs": [
     {
@@ -634,9 +634,402 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc1977ba",
+   "metadata": {},
+   "source": [
+    "## 1431. Kids With the Greatest Number of Candies\n",
+    "\n",
+    "There are n kids with candies. You are given an integer array candies, where each candies[i] represents the number of candies the ith kid has, and an integer extraCandies, denoting the number of extra candies that you have.\n",
+    "\n",
+    "Return a boolean array result of length n, where result[i] is true if, after giving the ith kid all the extraCandies, they will have the greatest number of candies among all the kids, or false otherwise.\n",
+    "\n",
+    "Note that multiple kids can have the greatest number of candies.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: candies = [2,3,5,1,3], extraCandies = 3 <br />\n",
+    "Output: [true,true,true,false,true] <br />\n",
+    "Explanation: If you give all extraCandies to: <br />\n",
+    "- Kid 1, they will have 2 + 3 = 5 candies, which is the greatest among the kids. <br />\n",
+    "- Kid 2, they will have 3 + 3 = 6 candies, which is the greatest among the kids. <br />\n",
+    "- Kid 3, they will have 5 + 3 = 8 candies, which is the greatest among the kids. <br />\n",
+    "- Kid 4, they will have 1 + 3 = 4 candies, which is not the greatest among the kids. <br />\n",
+    "- Kid 5, they will have 3 + 3 = 6 candies, which is the greatest among the kids.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: candies = [4,2,1,1,2], extraCandies = 1 <br />\n",
+    "Output: [true,false,false,false,false] <br />\n",
+    "Explanation: There is only 1 extra candy. <br />\n",
+    "Kid 1 will always have the greatest number of candies, even if a different kid is given the extra candy.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: candies = [12,1,12], extraCandies = 10 <br />\n",
+    "Output: [true,false,true]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "27f99dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f28daf09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kidsWithCandies(candies: List[int], extraCandies: int) -> List[bool]:\n",
+    "    \n",
+    "    greatest = max(candies)\n",
+    "    \n",
+    "    return list(map(lambda x: (x + extraCandies) >= greatest, candies))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8fff4b74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, True, False, True]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candies = [2, 3, 5, 1, 3]\n",
+    "extraCandies = 3\n",
+    "\n",
+    "kidsWithCandies(candies, extraCandies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "2881b26e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, False, False, False, False]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candies = [4, 2, 1, 1, 2]\n",
+    "extraCandies = 1\n",
+    "\n",
+    "kidsWithCandies(candies, extraCandies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "337298dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, False, True]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candies = [12, 1, 12]\n",
+    "extraCandies = 10\n",
+    "\n",
+    "kidsWithCandies(candies, extraCandies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91509f6e",
+   "metadata": {},
+   "source": [
+    "## 605. Can Place Flowers\n",
+    "\n",
+    "You have a long flowerbed in which some of the plots are planted, and some are not. However, flowers cannot be planted in adjacent plots.\n",
+    "\n",
+    "Given an integer array flowerbed containing 0's and 1's, where 0 means empty and 1 means not empty, and an integer n, return true if n new flowers can be planted in the flowerbed without violating the no-adjacent-flowers rule and false otherwise.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: flowerbed = [1,0,0,0,1], n = 1 <br />\n",
+    "Output: true\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: flowerbed = [1,0,0,0,1], n = 2 <br />\n",
+    "Output: false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "854ba6e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "b45b6e62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Older Solution\n",
+    "\n",
+    "# def canPlaceFlowers(flowerbed: List[int], n: int) -> bool:\n",
+    "    \n",
+    "#     if len(flowerbed) == 1 and flowerbed[0] == 0:\n",
+    "#         return True\n",
+    "    \n",
+    "#     prev_zero = True\n",
+    "#     for i in range(len(flowerbed) - 1):\n",
+    "#         if flowerbed[i] == 0:\n",
+    "#             if prev_zero == True and flowerbed[i + 1] == 0:\n",
+    "#                 prev_zero = False\n",
+    "#                 n -= 1\n",
+    "#             else:\n",
+    "#                 prev_zero = True\n",
+    "#         else:\n",
+    "#             prev_zero = False\n",
+    "    \n",
+    "#     if prev_zero == True and flowerbed[len(flowerbed) - 1] == 0:\n",
+    "#         n -= 1\n",
+    "    \n",
+    "#     if n <= 0:\n",
+    "#         return True\n",
+    "    \n",
+    "#     return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "2c074658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def canPlaceFlowers(flowerbed: List[int], n: int) -> bool:\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(len(flowerbed)):\n",
+    "        if flowerbed[i] == 0:\n",
+    "            # Check if the left and right plots are empty.\n",
+    "            empty_left_plot = (i == 0) or (flowerbed[i - 1] == 0)\n",
+    "            empty_right_lot = (i == len(flowerbed) - 1) or (flowerbed[i + 1] == 0)\n",
+    "                \n",
+    "            # If both plots are empty, we can plant a flower here.\n",
+    "            if empty_left_plot and empty_right_lot:\n",
+    "                flowerbed[i] = 1\n",
+    "                count += 1\n",
+    "        if count >= n:\n",
+    "            return True\n",
+    "    \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "3a12bc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [1, 0, 0, 0, 1]\n",
+    "n = 1\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "0b8eaa9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [1, 0, 0, 0, 1]\n",
+    "n = 2\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "a7c5219d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [0, 0, 1, 0, 1]\n",
+    "n = 1\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "736c848a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [0]\n",
+    "n = 1\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "3b54d276",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [0, 0, 1, 0, 0]\n",
+    "n = 1\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "b750849c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [0, 0, 0, 0, 1]\n",
+    "n = 2\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "77341a17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowerbed = [1, 0, 0, 0, 0, 1]\n",
+    "n = 2\n",
+    "\n",
+    "canPlaceFlowers(flowerbed, n)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "070f11ec",
+   "id": "a23088f3",
    "metadata": {},
    "outputs": [],
    "source": []
