add 1 more array related code example

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa25ac80",
+   "id": "994d6d1f",
    "metadata": {},
    "source": [
     "# LeetCode"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0337c70e",
+   "id": "6ee50ff1",
    "metadata": {},
    "source": [
     "## 1768. Merge Strings Alternately\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cbf5bfcc",
+   "id": "a96f49c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0953d1f7",
+   "id": "880e5831",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "70fca6de",
+   "id": "156caef0",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "49f811b1",
+   "id": "043b997b",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed267c7",
+   "id": "f6eaab30",
    "metadata": {},
    "source": [
     "## 1071. Greatest Common Divisor of Strings\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01429b44",
+   "id": "99a8f185",
    "metadata": {},
    "source": [
     "### Recursive Solution"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "02127614",
+   "id": "195c57af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "eeca67f5",
+   "id": "eebc289e",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5d3d6609",
+   "id": "1e14ac27",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4f90d516",
+   "id": "9b7a3418",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914b8897",
+   "id": "aa2713f9",
    "metadata": {},
    "source": [
     "### Iterative Solution"
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8b7f1bd5",
+   "id": "925993ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "33900ee0",
+   "id": "df31c970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8ba42cc7",
+   "id": "4415a679",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "73a0d8f8",
+   "id": "be226171",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d8ee944b",
+   "id": "dcf3b814",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc1977ba",
+   "id": "e74f785b",
    "metadata": {},
    "source": [
     "## 1431. Kids With the Greatest Number of Candies\n",
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "27f99dbb",
+   "id": "5b91c193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f28daf09",
+   "id": "f200b0ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8fff4b74",
+   "id": "7a4666d8",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2881b26e",
+   "id": "3d7d24b6",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "337298dc",
+   "id": "7e4ab7a2",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91509f6e",
+   "id": "4b1c7bc0",
    "metadata": {},
    "source": [
     "## 605. Can Place Flowers\n",
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "854ba6e1",
+   "id": "1e91232b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "b45b6e62",
+   "id": "cd6b2fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "2c074658",
+   "id": "78826948",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "3a12bc5d",
+   "id": "b38ff830",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "0b8eaa9f",
+   "id": "8ade9e18",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "a7c5219d",
+   "id": "aecdb8af",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "736c848a",
+   "id": "60c54c91",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "3b54d276",
+   "id": "0fae0c03",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "b750849c",
+   "id": "aa9adced",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "77341a17",
+   "id": "40581d18",
    "metadata": {},
    "outputs": [
     {
@@ -1027,9 +1027,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce019950",
+   "metadata": {},
+   "source": [
+    "## 345. Reverse Vowels of a String\n",
+    "\n",
+    "Given a string s, reverse only all the vowels in the string and return it.\n",
+    "\n",
+    "The vowels are 'a', 'e', 'i', 'o', and 'u', and they can appear in both lower and upper cases, more than once.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: s = \"hello\"\n",
+    "Output: \"holle\"\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: s = \"leetcode\"\n",
+    "Output: \"leotcede\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "ad48cc6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Older Solution\n",
+    "\n",
+    "# def reverseVowels(s: str) -> str:\n",
+    "    \n",
+    "#     result = []\n",
+    "#     found_vowels = []\n",
+    "#     vowels = set(\"aeiouAEIOU\")\n",
+    "    \n",
+    "#     for ch in s:\n",
+    "#         if ch in vowels:\n",
+    "#             found_vowels.append(ch)\n",
+    "#             result.append('*')\n",
+    "#         else:\n",
+    "#             result.append(ch)\n",
+    "    \n",
+    "#     for i in range(len(result)):\n",
+    "#         if result[i] == '*':\n",
+    "#             result[i] = found_vowels.pop(-1)\n",
+    "    \n",
+    "#     return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "793d510b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseVowels(s: str) -> str:\n",
+    "    \n",
+    "    start = 0\n",
+    "    end = len(s) - 1\n",
+    "    \n",
+    "    s = list(s)\n",
+    "    vowels = set(\"aeiouAEIOU\")\n",
+    "    \n",
+    "    while start < end:\n",
+    "        \n",
+    "        while start < len(s) and s[start] not in vowels:\n",
+    "            start += 1\n",
+    "            \n",
+    "        while end >= 0 and s[end] not in vowels:\n",
+    "            end -= 1\n",
+    "        \n",
+    "        if start < end:\n",
+    "            s[start], s[end] = s[end], s[start]\n",
+    "            start += 1\n",
+    "            end -= 1\n",
+    "    \n",
+    "    return ''.join(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "35c1fdef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'holle'"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"hello\"\n",
+    "reverseVowels(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "29130ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'leotcede'"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"leetcode\"\n",
+    "reverseVowels(s)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23088f3",
+   "id": "306e3ed2",
    "metadata": {},
    "outputs": [],
    "source": []
